...
    <string name="agent_edit_error_avatar">Unable to use this image as the avatar.</string>
    <string name="settings_error_token_load">Unable to refresh token usage.</string>
    <string name="settings_error_token_clear">Unable to clear token usage.</string>
    <string name="settings_error_avatar">Unable to save this avatar image.</string>
    <string name="common_cd_collapse">Collapse</string>
    <string name="common_cd_expand">Expand</string>
    <string name="common_state_collapsed">Collapsed</string>
    <string name="common_state_expanded">Expanded</string>
    <string name="common_cd_navigate">Navigate</string>
    <string name="common_cd_pin">Pin</string>
    <string name="common_cd_unpin">Unpin</string>
    <string name="common_cd_selected">Selected</string>
    <string name="common_cd_success">Success</string>
    <string name="common_cd_failed">Failed</string>
...
